Применяет флекс бокс

--- a/index.html
+++ b/index.html
@@ -24,18 +24,20 @@
         </a>
 
         <ul class="nav-list">
-          <li><a href="" class="link current">Студия</a></li>
-          <li><a href="./portfolio.html" class="link">Портфолио</a></li>
-          <li><a href="" class="link">Контакты</a></li>
+          <li class="nav-items"><a href="" class="link current">Студия</a></li>
+          <li class="nav-items">
+            <a href="./portfolio.html" class="link">Портфолио</a>
+          </li>
+          <li class="nav-items"><a href="" class="link">Контакты</a></li>
         </ul>
 
         <ul class="nav-contakt">
-          <li>
+          <li class="nav-items">
             <a href="mailto:info@devstudio.com" class="link-mail"
               >info@devstudio.com</a
             >
           </li>
-          <li>
+          <li class="nav-items">
             <a href="tel:+380961111111" class="link-tel">+380961111111</a>
           </li>
         </ul>
@@ -56,7 +58,7 @@
       <section class="section">
         <h2 class="section-title invisible">Наши преимущества</h2>
         <div class="container">
-          <ul>
+          <ul class="advantages">
             <li class="section-items">
               <img
                 class="section-img"
@@ -106,7 +108,7 @@
       <section class="section">
         <div class="container">
           <h2 class="section-title title-work">Чем мы занимаемся</h2>
-          <ul>
+          <ul class="work-list">
             <li class="work-items">
               <a href=""
                 ><img src="./image/notebook.jpg" width="370" alt="ноутбук" />
@@ -136,7 +138,7 @@
       <section class="section team">
         <div class="container">
           <h2 class="section-title section-title-team">Наша команда</h2>
-          <ul>
+          <ul class="team-list">
             <li class="section-iteams-team">
               <img class="team-img" src="./image/face1.jpg" alt="Портрет" />
               <h3 class="section-subtitle comand">Николай Кучеренко</h3>
@@ -305,38 +307,38 @@
       <section class="section">
         <div class="container">
           <h2 class="section-title title-customers">Постоянные клиенты</h2>
-          <ul>
-            <li>
+          <ul class="client-list">
+            <li class="client-items">
               <a href=""
                 ><img src="./image/Client1.svg" alt="компания" width="170"
               /></a>
             </li>
 
-            <li>
+            <li class="client-items">
               <a href=""
                 ><img src="./image/Client2.svg" alt="компания" width="170"
               /></a>
             </li>
 
-            <li>
+            <li class="client-items">
               <a href=""
                 ><img src="./image/Client3.svg" alt="компания" width="170"
               /></a>
             </li>
 
-            <li>
+            <li class="client-items">
               <a href=""
                 ><img src="./image/Client4.svg" alt="компания" width="170"
               /></a>
             </li>
 
-            <li>
+            <li class="client-items">
               <a href=""
                 ><img src="./image/Client5.svg" alt="компания" width="170"
               /></a>
             </li>
 
-            <li>
+            <li class="client-items">
               <a href=""
                 ><img src="./image/Client6.svg" alt="компания" width="170"
               /></a>
@@ -349,8 +351,8 @@
     <!--Подвал-->
 
     <footer class="footer">
-      <div class="container">
-        <div>
+      <div class="container footer-bloks">
+        <div class="footer-addres">
           <a href="./index.html" lang="en" class="logo-link logo-link-footer">
             <span class="logo-web">Web</span>
             <span class="logo-studio">Studio</span>
