--- a/portfolio.html
+++ b/portfolio.html
@@ -25,18 +25,22 @@
         </a>
 
         <ul class="nav-list">
-          <li><a href="./index.html" class="link">Студия</a></li>
-          <li><a href="./portfolio.html" class="link current">Портфолио</a></li>
-          <li><a href="" class="link">Контакты</a></li>
+          <li class="nav-items">
+            <a href="./index.html" class="link">Студия</a>
+          </li>
+          <li class="nav-items">
+            <a href="./portfolio.html" class="link current">Портфолио</a>
+          </li>
+          <li class="nav-items"><a href="" class="link">Контакты</a></li>
         </ul>
 
         <ul class="nav-contakt">
-          <li>
+          <li class="nav-items">
             <a href="mailto:info@devstudio.com" class="link-mail"
               >info@devstudio.com</a
             >
           </li>
-          <li>
+          <li class="nav-items">
             <a href="tel:+380961111111" class="link-tel">+380961111111</a>
           </li>
         </ul>
@@ -48,16 +52,26 @@
       <section>
         <h1 class="portfolio">Портфолио</h1>
 
-        <ul>
-          <li><button type="button" class="port-button">Все</button></li>
-          <li><button type="button" class="port-button">Веб-сайты</button></li>
-          <li><button type="button" class="port-button">Приложения</button></li>
-          <li><button type="button" class="port-button">Дизайн</button></li>
-          <li><button type="button" class="port-button">Маркетинг</button></li>
+        <ul class="button-list">
+          <li class="button-items">
+            <button type="button" class="port-button">Все</button>
+          </li>
+          <li class="button-items">
+            <button type="button" class="port-button">Веб-сайты</button>
+          </li>
+          <li class="button-items">
+            <button type="button" class="port-button">Приложения</button>
+          </li>
+          <li class="button-items">
+            <button type="button" class="port-button">Дизайн</button>
+          </li>
+          <li class="button-items">
+            <button type="button" class="port-button">Маркетинг</button>
+          </li>
         </ul>
 
         <ul class="port-list">
-          <li>
+          <li class="port-items">
             <a href=""
               ><img
                 class="port-img"
@@ -75,7 +89,7 @@
             </a>
           </li>
 
-          <li>
+          <li class="port-items">
             <a href=""
               ><img
                 class="port-img"
@@ -93,9 +107,10 @@
             </a>
           </li>
 
-          <li>
+          <li class="port-items">
             <a href=""
               ><img
+                class="port-img"
                 src="./image/portfolio3.jpg"
                 alt="Релама ресторана"
                 width="370"
@@ -110,7 +125,7 @@
             </a>
           </li>
 
-          <li>
+          <li class="port-items">
             <a href=""
               ><img
                 class="port-img"
@@ -128,7 +143,7 @@
             </a>
           </li>
 
-          <li>
+          <li class="port-items">
             <a href=""
               ><img
                 class="port-img"
@@ -146,7 +161,7 @@
             </a>
           </li>
 
-          <li>
+          <li class="port-items">
             <a href=""
               ><img
                 class="port-img"
@@ -164,7 +179,7 @@
             </a>
           </li>
 
-          <li>
+          <li class="port-items">
             <a href=""
               ><img
                 class="port-img"
@@ -182,7 +197,7 @@
             </a>
           </li>
 
-          <li>
+          <li class="port-items">
             <a href=""
               ><img
                 class="port-img"
@@ -200,7 +215,7 @@
             </a>
           </li>
 
-          <li>
+          <li class="port-items">
             <a href=""
               ><img
                 class="port-img"
@@ -222,8 +237,8 @@
     </main>
 
     <footer class="footer">
-      <div class="container">
-        <div>
+      <div class="container footer-bloks">
+        <div class="footer-addres">
           <a href="./index.html" lang="en" class="logo-link logo-link-footer">
             <span class="logo-web">Web</span>
             <span class="logo-studio">Studio</span>
