Исправляет ошибки указанные ментором

--- a/index.html
+++ b/index.html
@@ -56,8 +56,9 @@
       </section>
       <!--Наши преимущества-->
       <section class="section">
-        <h2 class="section-title invisible">Наши преимущества</h2>
         <div class="container">
+          <h2 class="section-title invisible">Наши преимущества</h2>
+
           <ul class="advantages">
             <li class="section-items">
               <img
@@ -352,7 +353,7 @@
 
     <footer class="footer">
       <div class="container footer-bloks">
-        <div class="footer-addres">
+        <div class="footer-address">
           <a href="./index.html" lang="en" class="logo-link logo-link-footer">
             <span class="logo-web">Web</span>
             <span class="logo-studio">Studio</span>
