--- a/portfolio.html
+++ b/portfolio.html
@@ -72,165 +72,183 @@
 
         <ul class="port-list">
           <li class="port-items">
-            <a href=""
-              ><img
+            <div>
+              <img
                 class="port-img"
                 src="./image/portfolio1.jpg "
                 alt="Ноутбук"
                 width="370"
               />
-              <h2 class="port-title">Технокряк</h2>
-              <p class="port-subtitle">Веб-сайт</p>
               <p class="port-text">
                 Технокряк это современная площадка распространения коронавируса.
                 Компании используют эту платформу для цифрового шпионажа и атак
                 на защищённые сервера конкурентов.
               </p>
-            </a>
+            </div>
+            <div>
+              <h2 class="port-title">Технокряк</h2>
+              <p class="port-subtitle">Веб-сайт</p>
+            </div>
           </li>
 
           <li class="port-items">
-            <a href=""
-              ><img
+            <div>
+              <img
                 class="port-img"
                 src="./image/portfolio2.jpg"
                 alt="Постер НБА"
                 width="370"
               />
-              <h2 class="port-title">Постер New Orlean vs Golden Star</h2>
-              <p class="port-subtitle">Дизайн</p>
               <p class="port-text">
                 Технокряк это современная площадка распространения коронавируса.
                 Компании используют эту платформу для цифрового шпионажа и атак
                 на защищённые сервера конкурентов.
               </p>
-            </a>
+            </div>
+            <div>
+              <h2 class="port-title">Постер New Orlean vs Golden Star</h2>
+              <p class="port-subtitle">Дизайн</p>
+            </div>
           </li>
 
           <li class="port-items">
-            <a href=""
-              ><img
+            <div>
+              <img
                 class="port-img"
                 src="./image/portfolio3.jpg"
                 alt="Релама ресторана"
                 width="370"
               />
-              <h2 class="port-title">Ресторан Seafood</h2>
-              <p class="port-subtitle">Приложение</p>
               <p class="port-text">
                 Технокряк это современная площадка распространения коронавируса.
                 Компании используют эту платформу для цифрового шпионажа и атак
                 на защищённые сервера конкурентов.
               </p>
-            </a>
+            </div>
+            <div>
+              <h2 class="port-title">Ресторан Seafood</h2>
+              <p class="port-subtitle">Приложение</p>
+            </div>
           </li>
 
           <li class="port-items">
-            <a href=""
-              ><img
+            <div>
+              <img
                 class="port-img"
                 src="./image/portfolio4.jpg"
                 alt="Наушники"
                 width="370"
               />
-              <h2 class="port-title">Проект Prime</h2>
-              <p class="port-subtitle">Маркетинг</p>
               <p class="port-text">
                 Технокряк это современная площадка распространения коронавируса.
                 Компании используют эту платформу для цифрового шпионажа и атак
                 на защищённые сервера конкурентов.
               </p>
-            </a>
+            </div>
+            <div>
+              <h2 class="port-title">Проект Prime</h2>
+              <p class="port-subtitle">Маркетинг</p>
+            </div>
           </li>
 
           <li class="port-items">
-            <a href=""
-              ><img
+            <div>
+              <img
                 class="port-img"
                 src="./image/portfolio5.jpg"
                 alt="Коробки"
                 width="370"
               />
-              <h2 class="port-title">Проект Boxes</h2>
-              <p class="port-subtitle">Приложение</p>
               <p class="port-text">
                 Технокряк это современная площадка распространения коронавируса.
                 Компании используют эту платформу для цифрового шпионажа и атак
                 на защищённые сервера конкурентов.
               </p>
-            </a>
+            </div>
+            <div>
+              <h2 class="port-title">Проект Boxes</h2>
+              <p class="port-subtitle">Приложение</p>
+            </div>
           </li>
 
           <li class="port-items">
-            <a href=""
-              ><img
+            <div>
+              <img
                 class="port-img"
                 src="./image/portfolio6.jpg"
                 alt="Монитор"
                 width="370"
               />
-              <h2 class="port-title">Inspiration has no Borders</h2>
-              <p class="port-subtitle">Веб-сайт</p>
               <p class="port-text">
                 Технокряк это современная площадка распространения коронавируса.
                 Компании используют эту платформу для цифрового шпионажа и атак
                 на защищённые сервера конкурентов.
               </p>
-            </a>
+            </div>
+            <div>
+              <h2 class="port-title">Inspiration has no Borders</h2>
+              <p class="port-subtitle">Веб-сайт</p>
+            </div>
           </li>
 
           <li class="port-items">
-            <a href=""
-              ><img
+            <div>
+              <img
                 class="port-img"
                 src="./image/portfolio7.jpg"
                 alt="Книга"
                 width="370"
               />
-              <h2 class="port-title">Издание Limited Edition</h2>
-              <p class="port-subtitle">Дизайн</p>
               <p class="port-text">
                 Технокряк это современная площадка распространения коронавируса.
                 Компании используют эту платформу для цифрового шпионажа и атак
                 на защищённые сервера конкурентов.
               </p>
-            </a>
+            </div>
+            <div>
+              <h2 class="port-title">Издание Limited Edition</h2>
+              <p class="port-subtitle">Дизайн</p>
+            </div>
           </li>
 
           <li class="port-items">
-            <a href=""
-              ><img
+            <div>
+              <img
                 class="port-img"
                 src="./image/portfolio8.jpg"
                 alt="Лейба"
                 width="370"
               />
-              <h2 class="port-title">Проект LAB</h2>
-              <p class="port-subtitle">Маркетинг</p>
               <p class="port-text">
                 Технокряк это современная площадка распространения коронавируса.
                 Компании используют эту платформу для цифрового шпионажа и атак
                 на защищённые сервера конкурентов.
               </p>
-            </a>
+            </div>
+            <div>
+              <h2 class="port-title">Проект LAB</h2>
+              <p class="port-subtitle">Маркетинг</p>
+            </div>
           </li>
 
           <li class="port-items">
-            <a href=""
-              ><img
+            <div>
+              <img
                 class="port-img"
                 src="./image/portfolio9.jpg"
                 alt="Ноутбук"
                 width="370"
               />
-              <h2 class="port-title">Growing Business</h2>
-              <p class="port-subtitle">Приложение</p>
               <p class="port-text">
                 Технокряк это современная площадка распространения коронавируса.
                 Компании используют эту платформу для цифрового шпионажа и атак
                 на защищённые сервера конкурентов.
               </p>
-            </a>
+            </div>
+            <div>
+              <h2 class="port-title">Growing Business</h2>
+              <p class="port-subtitle">Приложение</p>
+            </div>
           </li>
         </ul>
       </section>
